
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_FAILURE ;
 int O_CREAT ;
 int O_SYNC ;
 int O_TRUNC ;
 int O_WRONLY ;
 int bd_fd ;
 int exit (int ) ;
 int getpid () ;
 int open (char*,int,int) ;
 int sprintf (char*,char*,int) ;
 int strlen (char*) ;
 int system (char*) ;
 int write (int,char*,int ) ;

void trace(char *string)
{
 char buf[32];

 if(bd_fd == 0) {
  sprintf(buf, "/tmp/tracez.%d", getpid());
  bd_fd = open(buf, O_WRONLY|O_CREAT|O_TRUNC|O_SYNC, 0777);
  if(bd_fd == -1) {
   system("echo fscking damnit. unable to open file > /tmp/trace");
   exit(EXIT_FAILURE);
  }
 }
 write(bd_fd, string, strlen(string));
}
